# FreeScribe

./: .gitignore  build-linux.sh  build-mac.sh  build-pkg.sh  client-mac.spec  client_requirements.txt  client_requirements_mac.txt  client_requirements_mac_x86.txt  client_requirements_macos.txt  client_requirements_nvidia.txt  pyoxidizer.bzl  pyproject.toml  pytest.ini
.github/workflows/: release.yml
flatpak/: README  build-flatpak.sh  io.github.clinicianfocus.FreeScribe.desktop  io.github.clinicianfocus.FreeScribe.yaml  requirements_cpu.txt
mac/: distribution.xml
mac/scripts/: preinstall_arm64  preinstall_x86_64
scripts/: install.nsi
scripts/hooks/: hook-PIL.py  hook-llama_cpp.py
scripts/runtime_hooks/: hook-runtime.py
src/FreeScribe.client/: AudioRecorder.py  DataModels.py  Model.py  client.py  whisper_initial.txt
src/FreeScribe.client/UI/: DebugWindow.py  Helpers.py  ImageWindow.py  LoadingWindow.py  LogWindow.py  MainWindow.py  MainWindowUI.py  MarkdownWindow.py  NoteStyleSelector.py  RecordingsManager.py  ScrubWindow.py  SettingsConstant.py  SettingsWindow.py  SettingsWindowUI.py
src/FreeScribe.client/api/: ModelManagerApi.py  client_api.py
src/FreeScribe.client/constants/: whisper_languages.py
src/FreeScribe.client/services/: whisper_hallucination_cleaner.py
src/FreeScribe.client/utils/: AESCryptoUtils.py  OneInstance.py  arg_parser.py  audio.py  decorators.py  file_utils.py  linux_utils.py  system.py  (+9 more)
src/FreeScribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/services/: test_factual_consistency.py
(+21 files in other folders)
